# lazysqlx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  subtask.yml
lua/lazysqlx/: health.lua  init.lua
migrations/: 20260101000001_create_posts.down.sql  20260101000001_create_posts.up.sql  20260101000002_create_comments.up.sql  20260101000003_add_published_to_posts.down.sql  20260101000003_add_published_to_posts.up.sql
plugin/: lazysqlx.lua
src/lazysqlx/: __main__.py  app.py  cli.py  editor.py  sqlx.py
src/lazysqlx/screens/: add_migration.py  confirm.py
src/lazysqlx/widgets/: migration_detail.py  migration_list.py
