[project]
name = "lazysqlx"
version = "0.1.0"
description = "A lazygit-inspired TUI for sqlx database migrations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
lazysqlx = "lazysqlx.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazysqlx"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
